<resources>
    <string name="app_name">MovieDB</string>
    <string name="overview">Overview</string>
    <string name="releaseDate">Released</string>
    <string name="genre">Genre</string>
    <string name="popularity">Popularity</string>
    <string name="voteCount">Rating</string>
    <string name="voteAverage">Vote Average</string>
    <string name="originalTitle">Original Title</string>
    <string name="Language">Language</string>
    <string name="nonValue">-</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now_playing">Now Playing</string>
    <string name="up_coming">Up Coming</string>
    <string name="productioncompanies">Production Companies</string>
    <string name="Actor">Actor</string>
    <string name="keterangan_most_trending_week">Most Trending in this Week</string>
    <string name="keterangan_most_trending_day">Most Trending in this Day</string>
    <string name="NonValueAngka">0</string>
</resources>