<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#052461">


    <ProgressBar
        android:id="@+id/progressBar_MoviesDetailsFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progressdialogshape"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConstraintLayout_MovieDetailsFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
           >

            <ImageView
                android:id="@+id/bc_Path"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:alpha="0.8"
                android:cropToPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <TextView
                android:id="@+id/tagline_movie_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:background="@android:drawable/screen_background_dark_transparent"
                android:padding="10dp"
                android:text="Tagline"
                android:textAlignment="textEnd"
                android:textColor="#FBFBFB"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/posterPath_movie_detail"
                android:layout_width="150dp"
                android:layout_height="170dp"
                android:layout_marginTop="130dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/bc_Path"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <TextView
                android:id="@+id/title_movie_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/nonValue"
                android:textAlignment="center"
                android:textColor="#FFEB3B"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/posterPath_movie_detail" />

            <TextView
                android:id="@+id/originalTitle_movieDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/nonValue"
                android:textAlignment="center"
                android:textColor="#EADDDD"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/title_movie_detail"
                app:layout_constraintStart_toStartOf="@+id/title_movie_detail"
                app:layout_constraintTop_toBottomOf="@+id/title_movie_detail" />

            <TextView
                android:id="@+id/txtview2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="9dp"
                android:text="@string/releaseDate"
                android:textAlignment="center"
                android:textColor="#FFEB3B"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/release_detail_movie"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtview3" />

            <TextView
                android:id="@+id/originalLanguage_movieDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/nonValue"
                android:textAlignment="center"
                android:textColor="#EADDDD"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/popularity_detail_movie" />

            <TextView
                android:id="@+id/txtview3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:text="@string/popularity"
                android:textAlignment="center"
                android:textColor="#FFEB3B"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/originalTitle_movieDetail" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="9dp"
                android:text="@string/originalLanguage"
                android:textAlignment="center"
                android:textColor="#FFEB3B"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/originalLanguage_movieDetail"
                app:layout_constraintEnd_toStartOf="@+id/txtview2"
                app:layout_constraintStart_toEndOf="@+id/txtview3"
                app:layout_constraintTop_toTopOf="@+id/txtview3" />

            <TextView
                android:id="@+id/release_detail_movie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/nonValue"
                android:textAlignment="center"
                android:textColor="#EADDDD"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/txtview2"
                app:layout_constraintStart_toStartOf="@+id/txtview2"
                app:layout_constraintTop_toTopOf="@+id/popularity_detail_movie" />

            <TextView
                android:id="@+id/popularity_detail_movie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nonValue"
                android:textAlignment="center"
                android:textColor="#EADDDD"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/txtview3"
                app:layout_constraintStart_toStartOf="@+id/txtview3"
                app:layout_constraintTop_toBottomOf="@+id/txtview3" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/card_shape"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/originalLanguage_movieDetail">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginTop="15dp"
                        app:layout_constraintStart_toStartOf="@+id/overviewText_movieDetails"
                        app:layout_constraintTop_toBottomOf="@+id/voteCount_movie_detail"
                        app:srcCompat="@drawable/star" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/overview"
                        android:textColor="#0C0C0C"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/overviewText_movieDetails"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/nonValue"
                        android:textColor="#CAB818"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="@+id/textView2"
                        app:layout_constraintStart_toStartOf="@+id/textView2"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <TextView
                        android:id="@+id/voteAverage_movie_detail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/nonValue"
                        android:textAlignment="textStart"
                        android:textColor="#CAB818"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/voteCount_movie_detail"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        app:layout_constraintTop_toTopOf="@+id/imageView2" />

                    <TextView
                        android:id="@+id/voteCount_movie_detail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/nonValue"
                        android:textColor="#A39C9C"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/overviewText_movieDetails"
                        app:layout_constraintStart_toEndOf="@+id/textView7"
                        app:layout_constraintTop_toTopOf="@+id/textView7" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/voteCount"
                        android:textAlignment="textStart"
                        android:textColor="#0C0C0C"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/textView2"
                        app:layout_constraintTop_toBottomOf="@+id/overviewText_movieDetails" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:text="@string/genre"
                        android:textColor="#0C0C0C"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/voteAverage_movie_detail"
                        app:layout_constraintStart_toStartOf="@+id/textView7"
                        app:layout_constraintTop_toBottomOf="@+id/voteAverage_movie_detail" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_genre_movieDetail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="@id/textView10"
                        app:layout_constraintTop_toBottomOf="@+id/textView10"

                        android:paddingEnd="20dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"/>

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/productioncompanies"
                        android:textColor="#0C0C0C"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/textView2"
                        app:layout_constraintTop_toBottomOf="@+id/rv_genre_movieDetail" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_productioncompanies_movieDetail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="@id/textView10"
                        app:layout_constraintStart_toStartOf="@id/textView11"
                        app:layout_constraintTop_toBottomOf="@+id/textView11"

                        android:layout_marginTop="5dp"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>